# v

./: Cargo.toml
assets/tiled/: base_tileset.tsx  ground_tileset.tsx  map.tmx  map20x20.tmx  map4x4.tmj  map4x4.tmx  tiled_project.tiled-session
src/: brain.rs  main.rs  main2.rs  setup.rs
src/game/: mod.rs  settings.rs
src/game/core/: mod.rs
src/game/helpers/: camera.rs  mod.rs  tiled.rs
src/game/map/: mod.rs  npc.rs  voxel_map.rs
src/game/thinker/: mod.rs  scorers.rs  thinker.rs
src/game/thinker/actions/: mod.rs  rest.rs  wander.rs
src/game/thinker/common/: mod.rs  movement.rs
src/game/tiled/: json_serde.rs  mod.rs
