[package]
name = "v"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.15.0", features = ["dynamic_linking", "bevy_remote"] }
bevy-inspector-egui = "0.28.0"
bevy_common_assets = { version="0.12.0", features = ["json"] }
bevy_ecs_tilemap = "0.15.0"
bevy_prng = { version = "0.8.0", features =["wyrand"] }
bevy_rand =  { version = "0.8.0", features =["wyrand"] }
bevy_voxel_world = "0.10.0"
log = "0.4.22"
rand = "0.8.5"
rand_core = "0.6.4"
serde = "1.0.216"

serde_json = "1.0"
tiled = { version = "0.11.0", default-features = false }
# binary-greedy-meshing = "0.3.6"


[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# for Windows
# [target.x86_64-pc-windows-msvc]
# linker = "rust-lld.exe"


# watchexec -r cargo  run
